[build-system]
requires = [
    "setuptools >= 65",
    "wheel >= 0.38",
]
build-backend = "setuptools.build_meta"

[project]
name = "django-npm"
version = "1.2.0"
description = 'A django staticfiles finder that supporting npm/yarn/pnpm'
license = {text = "MIT"}
authors = [
    { name = "David Nugent", email = "davidn@uniquode.io" },
    { name = "Kevin McCarthy", email = "e@kevinmccarthy.org" },
]
urls = { home-page = "https://github.com/Uniquode/django-npm" }
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords=[
    "django",
    "npm",
    "staticfiles",
]
requires-python = ">= 3.9"

dependencies = [
    "Django >= 3.2",
]

[project.optional-dependencies]
test = [
    "pytest >= 6.2"
]
